--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 /* Image Styles */
 .bg-image {
-    background-image: url('/images/');
+    background-image: url('/images/yoga-web-1-pebble-beach.jpg');
     background-size: cover;
     min-height: 10rem;
 }
@@ -16,9 +16,58 @@
 
 /* Universal Styles & Utility Classes */
 
+.padded { padding: 5% }
+.padded-sm { padding: 1rem; }
+.padded-lg { padding: 10%;}
+
+
+
 .tall-50 {min-height: 50vh;  }
 .tall-60 { min-height: 60vh; }
 .tall-70 {min-height: 70vh;}
 .tall-80 { min-height: 80vh; }
 .tall-90 { min-height: 90vh; }
 .tall-100 { min-height: 100vh; }
+
+
+
+/* Typography Styles */
+
+h2 {
+    font-size: 2.5rem;
+    line-height: 1.1;
+    margin-bottom: 1rem;
+}
+
+h3 { line-height: 1;}
+
+p {
+    font-weight: 200;
+    line-height: 1.5;
+    margin-bottom: 1rem;
+}
+
+p:last-child {
+    margin-bottom: 0;
+}
+
+a{
+    color: inherit;
+    text-decoration: none;
+    border-bottom: 1px solid;
+}
+
+
+.text-left    { text-align: left;   }
+.text-center  { text-align: center; }
+.text-right   { text-align: right;  }
+
+
+
+/* Header & Footer Styles */
+
+header {
+    background-image:url(/images/yoga-web-1-pebble-beach.jpg) ; 
+    background-size: cover;
+    background-position: center;
+}
