2nd attempt at adding images to yoga web 1

--- a/style.css
+++ b/style.css
@@ -71,3 +71,10 @@ header {
     background-size: cover;
     background-position: center;
 }
+
+
+/* background images */
+.bg-prayer { 
+    background-image: url(images/yoga-web-1-prayer.jpg);
+    background-position: 50% 35%;
+}
