--- a/style.css
+++ b/style.css
@@ -63,10 +63,13 @@ h2 {
     margin-bottom: 1rem;
 }
 
-h3 { line-height: 1;}
+h3 { line-height: 1;
+    font-size: 1.5rem;    
+}
 
 p {
     font-weight: 200;
+    font-size: 0.9rem;
     line-height: 1.5;
     margin-bottom: 1rem;
 }
@@ -83,13 +86,19 @@ a{
 
 .header-h1 {
     color: white;
+    font-size: 4rem;
 }
 
 .header-h3 {
     color: white;
+    font-size: 2rem;
 }
 
 .home-nav {
+    color: white;
+}
+
+.book-h2 {
     color: white;
 }
 
@@ -122,10 +131,13 @@ header {
     background-position: 50% 35%;
 }
 
-.bg-warrior3 {
-    background-image: url(images/yoga-web-1-warrior3.jpg) ;
+.bg-youtube {
+    background-image: url(images/yoga-web-1-youtube-still.jpg) ;
+    background-position: 50% 74%;
+    min-height: 20rem;
 }
 
-.bg-youtube {
-    background-image: url(images/yoga-web-1-youtube.jpg) ;
-}
+.bg-forwardfold {
+    background-image: url(images/yoga-web-1-forwardfold.jpg) ;
+    background-position: 50% 36%;
+
